[package]
name = "rs3ds_test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
nalgebra = "0.32.3"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"

[profile.release]
opt-level = 3
lto = true
